<resources>
    <string name="app_name">Data science for all</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="button_next">NEXT</string>
    <string name="button_skip">SKIP</string>
    <string name="menu_item1">What is data science?</string>
    <string name="menu_item2">Who\'s your friend?</string>
    <string name="menu_item3">Predict your friend</string>
    <string name="menu_item4">Log Out</string>
    <string name="dialog_button">PROCEED</string>
    <string name="dialog_end_button">FINISH</string>
    <string name="dialog_end_item">Thanks for letting us know of your preferences. Proceed to the next section and see how this information can be analyzed.</string>
    <string name="dialog_back_item">Are you sure you want to exit ?</string>
    <string name="dialog_item"> Let’s get started with our fun exercise! You will now be shown profiles of some young people. Based on the description provided again each person, decide whether you would like to be friends with her/him. \nYou can rate on a scale of 1-5, where 5 stars would mean you will definitely make friends with the person and 1 meaning you will definitely not make friends.</string>
    <string name="no_rating_content">Do rate your feeling about this person. You cannot proceed to the next profile until you finish rating this.</string>
    <string name="Toast">" 5 stars means you will definitely make friends with the person and 1 means you will definitely not make friends."</string>
    <string name="slider_screen_1">Hello there! Let\'s begin with a story</string>
    <string name="slider_screen_2">In the year 1854, London, the capital city of England, experienced an outbreak of Cholera.</string>
    <string name="slider_screen_3">The sad thing was, no one really knew what Cholrea was or how to go about treating it.</string>
    <string name="slider_screen_4">It was considered that such diseases spread through the air while it really was a water-borne disease.</string>
    <string name="slider_screen_5">At that time, John Snow, a young British doctor did not really buy the idea of Cholera spreading through the air. He started looking around.</string>
    <string name="slider_screen_6">He tracked down information from hospital and public records on when the outbreak began and tried to see what was common to the victims.</string>
    <string name="slider_screen_7">He put out all the information collected onto a map of London.</string>
    <string name="slider_screen_9">Several interesting facts came to light by looking at this colored map. Blocks near Broad street seemed to be heavily affected while neighboring blocks, just a mile or so away, seemed to be totally unaffected.</string>
    <string name="slider_screen_11">What was going on?</string>
    <string name="slider_screen_12">On talking to people living there,John discovered that people in the nearby unaffected blocks used a different hand pump to fetch water than those living near Broad street.</string>
    <string name="slider_screen_13">This helped John rule out other possible sources of the epidemic besides pump water.</string>
    <string name="slider_screen_14">On 7 September 1854, Snow took his research to the town officials and convinced them to take the handle off the pump, making it impossible to draw water.</string>
    <string name="slider_screen_15">The officials were reluctant to believe him, but took the handle off as a trial only to find the outbreak of cholera trickle to a stop.</string>
    <string name="slider_screen_16">Gradually, people who had left their homes and businesses in the Broad Street area out of fear of Cholera began to return.</string>
    <string name="slider_screen_17">What John Snow did in this example is what data science actually is!</string>
    <string name="slider_screen_18">Data Science is learning new things about our world by collecting and analyzing information of events that have taken place.</string>
    <string name="slider_screen_19">In this example, John Snow showed how relating data on people’s source of water to the places they lives was able to show possibly infected hand pumps.</string>
    <string name="title_activity_story">StoryActivity</string>
    <string name="action_settings">Settings</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="grade">Grade</string>
    <string name="school">School</string>

    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registere</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_analysis_page">AnalysisPage</string>
    <string name="title_activity_analysis_page1">Analysis Page</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_predict">PredictActivity</string>
    <string name="no_exercise">"We won't be able to predict anything until you tell us something about yourself. Complete the Who's your friend exercise and we will then be able to predict your preferences."</string>
    <string name="title_activity_build_predictor">BuildPredictorActivity</string>

</resources>

