<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/main1"
    tools:context="com.example.user.datascienceapp.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C80815"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:layout_centerInParent="true"
        android:paddingTop="50dp">

        <Button
            android:id="@+id/story_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/customized_buttons_collect_data"
            android:fontFamily="serif-monospace"
            android:onClick="onClick"
            android:text="@string/menu_item1"
            android:textColor="@color/slider_text"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/collect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/story_button"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/customized_buttons_story"
            android:fontFamily="serif-monospace"
            android:text="@string/menu_item2"
            android:textColor="@color/slider_text"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/analyze_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/customized_buttons_analyze_data"
            android:fontFamily="serif-monospace"
            android:text="@string/menu_item3"
            android:textColor="@color/slider_text"
            android:textSize="20dp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/signout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:background="@drawable/customized_signout"
            android:fontFamily="serif-monospace"
            android:text="@string/menu_item4"
            android:textColor="@color/slider_text"
            android:textSize="15dp"
            android:textStyle="bold"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>
